--- a/package.json
+++ b/package.json
@@ -34,13 +34,14 @@
     "postcss-loader": "^7.3.3",
     "postcss-nested": "^6.0.1",
     "postcss-opacity": "^5.0.0",
-    "postcss-preset-env": "^9.2.0",
+    "postcss-preset-env": "^9.3.0",
     "postcss-pseudoelements": "^5.0.0",
     "postcss-vmin": "^3.0.0",
     "postcss-will-change": "^4.0.1",
     "rucksack-css": "^1.0.2"
   },
   "dependencies": {
-    "install": "^0.13.0"
+    "install": "^0.13.0",
+    "postcss-prefix-hover": "^1.0.3"
   }
 }
